argo/apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  labels:
    components.nora/tls: enabled
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: papers.nora
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
